src/objects/Delivery__c.object
<CustomObject>
	<fields>
		<fullName>Invoice_Total__c</fullName>
		<formula>Invoice__r.Invoice_Total__c</formula>
		<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
		<label>Invoice Total</label>
		<precision>18</precision>
		<scale>2</scale>
		<type>Currency</type>
	</fields>
	<fields>
		<fullName>Invoice__c</fullName>
		<deleteConstraint>SetNull</deleteConstraint>
		<label>Invoice</label>
		<referenceTo>Invoice__c</referenceTo>
		<relationshipLabel>Deliveries</relationshipLabel>
		<relationshipName>Deliveries</relationshipName>
		<type>Lookup</type>
	</fields>
	<fields>
		<fullName>Order_Number__c</fullName>
		<label>Order Number</label>
		<length>255</length>
		<type>Text</type>
	</fields>
	<label>Delivery</label>
	<listViews>
		<fullName>All</fullName>
		<columns>Order_Number__c</columns>
		<columns>Invoice__c</columns>
		<columns>Invoice_Total__c</columns>
		<filterScope>Everything</filterScope>
		<label>All</label>
	</listViews>
	<nameField>
		<displayFormat>D-{0000}</displayFormat>
		<label>Delivery Name</label>
		<type>AutoNumber</type>
	</nameField>
	<pluralLabel>Deliveries</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>